--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  {% load static %}
+  
 
 <head>
   <!-- Theme Made By www.w3schools.com -->
   <title>HardflipTI</title>
   <meta charset="utf-8">
-  <link rel="icon" type="image/x-icon" href="{% static 'assets/img/logo1.png' %}">
+  <link rel="icon" type="image/x-icon" href="assets/logo1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
