--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <span class="icon-bar"></span>                        
         </button>
         <table border="0" class="compartilha" id="tabela" ><td>
-        <a href="#myPage"><img src="{% static 'assets/img/logo1.png' %}" alt=""></a>
+        <a href="#myPage"><img src="assets/logo1.png" alt=""></a>
         </td>
   </div></table>
       </div>
@@ -335,19 +335,19 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="{% static 'assets/img/img4.png' %}" alt="logo_python" width="400" height="300">
+        <img src="assets/img4.png" alt="logo_python" width="400" height="300">
         <p><strong>Linguagem de programação</strong></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="{% static 'assets/img/img3.png' %}" alt="logo_django" width="400" height="300">
+        <img src="assets/img/img3.png" alt="logo_django" width="400" height="300">
         <p><strong>Framework</strong></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="{% static 'assets/img/img1.png' %}" alt="logo_css3_e_html" width="400" height="300">
+        <img src="assets/img1.png" alt="logo_css3_e_html" width="400" height="300">
         <p><strong>Linguagem de texto e estilização</strong></p>
       </div>
     </div>
