--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="assets/img/img3.png" alt="logo_django" width="400" height="300">
+        <img src="assets/img3.png" alt="logo_django" width="400" height="300">
         <p><strong>Framework</strong></p>
       </div>
     </div>
@@ -445,9 +445,9 @@
   <h2 class="text-center">CONTATO</h2>
   <div class="row">
     <div class="col-sm-5">
-      <div><a href="#" onclick="window.open('https://wa.me/5532991548534?text=Olá, gostaria de fazer um orçamento com a HardflipTI')"><img src="{% static 'assets/img/icons8-whatsapp-48.png' %}"> <br> (32) 99154-8534 </a> </div> 
+      <div><a href="#" onclick="window.open('https://wa.me/5532991548534?text=Olá, gostaria de fazer um orçamento com a HardflipTI')"><img src="assets/icons8-whatsapp-48.png"> <br> (32) 99154-8534 </a> </div> 
 
-        <div><a href="#"></a> <img src="{% static 'assets/img/icon.png' %}" alt="instagram">
+        <div><a href="#"></a> <img src="assets/icon.png" alt="instagram">
           <p>hardflipti</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> Juiz de fora - MG</p>
       <p><span class="glyphicon glyphicon-envelope"></span> hernanineto@outlook.com.br</p>
